# radio

./: .gitignore  README.md  dmradio.js  main.py  pyproject.toml
frontend/: index.html  main.css  radio.js
frontend/js/: audiomotion.js  radio.js
radio/: __init__.py  __main__.py  app.py  config.py  indexing.py  processor.py
radio/frontend/: favicon.avif  index.html  main.css
radio/frontend/js/: admin.js  radio.js  zero.js
