[project]
name = "webradio"
version = "0.1.0"
description = "A next generation web radio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "indigo-logger",
    "mutagen>=1.47.0",
    "rich>=13.9.4",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
indigo-logger = { git = "https://github.com/iiPythonx/il" }
