[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radio"
dynamic = ["version"]
description = "A next generation web radio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.8",
    "indigo-logger",
    "mutagen>=1.47.0",
    "rich>=13.9.4",
    "uvicorn[standard]>=0.34.0",
]

[tool.hatch.version]
path = "radio/__init__.py"

[project.scripts]
radio = "radio.__main__:radio"

[tool.uv.sources]
indigo-logger = { git = "https://github.com/iiPythonx/il" }
